# codex-memoryd

./: .dockerignore  .gitignore  .review-workflow.js  Cargo.toml  Dockerfile  README.md  SPEC.md  config.example.toml  docker-compose.yml
adapters/: README.md
docs/: agent-agnostic-memory-substrate.md  async-dreamer-v2.md  codex-integration.md  compatibility-policy.md  competitive-landscape.md  demo-substrate.md  dogfood-local.md  dogfood-mcp.md  dogfood-write-sandbox.md  dreamer-loop-design.md  dreamer-loop-research.md  dreamer-worker-plan.md  eval-benchmark-ops-plan.md  eval-substrate.md  evidence-ledger.md  hosted-app-adapter.md  mcp-v2.md  native-codex-memory-migration.md  procedure-maintenance-impl-plan.md  procedure-maintenance.md  runtime-ux-plan.md  semantic-layer.md  storage-libsql-plan.md  temporal-records.md  tranche-159-192-coordination.md
migrations/: 0001_init.sql  0002_fts.sql  0003_dream_runs.sql  0004_evidence_ledger.sql  0005_subjects_episodes.sql  0006_trust_quarantine.sql  0007_procedures.sql  0008_procedure_lifecycle.sql  0009_semantic_relations.sql  0010_temporal_records.sql  0011_dream_jobs.sql
scripts/: codex-memoryd-local-runtime.sh  codex-tap-release-smoke.sh  demo-substrate.sh  dogfood-compose-heartbeat.sh  dogfood-write-sandbox.sh  memd  v0.1-release-gate.sh
src/: activation.rs  backup.rs  benchmark_eval.rs  chatgpt_export_import.rs  cli.rs  config.rs  conformance.rs  doctor.rs  domain.rs  dream.rs  error.rs  eval.rs  export.rs  git_import.rs  hybrid_retrieval.rs  ids.rs  ingest.rs  lib.rs  main.rs  mcp.rs  metrics.rs  native_runtime.rs  perf.rs  policy.rs  proc_eval.rs  protocol.rs  provider.rs  recall.rs  retrieval_eval.rs  semantic_import.rs  server.rs  service.rs  status.rs  store.rs
tests/: adapter_conformance.rs  adapter_packages.rs  backup_restore.rs  (+26 more)
(+91 files in other folders)
